# Fundamentals-of-Algorithmization-and-Programming-Part

./: .gitignore  README.md
Fundamentals-of-Algorithmization-and-Programming-Part1/LabWork1/: .gitignore  task1.cpp
Fundamentals-of-Algorithmization-and-Programming-Part1/LabWork2/: task1.cpp  task10.cpp  task11.cpp  task12.cpp  task13.cpp  task2.cpp  task3.cpp  task4.cpp  task5.cpp  task6.cpp  task7.cpp  task8.cpp  task9.cpp
Fundamentals-of-Algorithmization-and-Programming-Part1/LabWork3/: task1.cpp  task2.cpp  task3.cpp  task6.cpp  task7.cpp  task8.cpp
Fundamentals-of-Algorithmization-and-Programming-Part1/LabWork3/Task4/: task4.cpp
Fundamentals-of-Algorithmization-and-Programming-Part1/LabWork3/Task5/: task5.cpp
Fundamentals-of-Algorithmization-and-Programming-Part1/LabWork5/Task5/: .gitignore
Fundamentals-of-Algorithmization-and-Programming-Part1/LabWork8/Task1/: CMakeLists.txt  algorithms.cpp  algorithms.h  binary.cpp  binary.h  constants.h  employee.h  employee_functions.cpp  employee_functions.h  main.cpp
Fundamentals-of-Algorithmization-and-Programming-Part1/LabWork8/Task1/elastic-search/: api.cpp  api.h  index.json
Fundamentals-of-Algorithmization-and-Programming-Part1/LabWork8/Task2/: CMakeLists.txt  main.cpp
Fundamentals-of-Algorithmization-and-Programming-Part1/LabWork8/Task2/app/: app.cpp
Fundamentals-of-Algorithmization-and-Programming-Part1/LabWork8/Task2/app/header-files/: app.h
Fundamentals-of-Algorithmization-and-Programming-Part1/LabWork8/Task2/constants/: constants.h
Fundamentals-of-Algorithmization-and-Programming-Part1/LabWork8/Task2/db/: conn.cpp  db.cpp
Fundamentals-of-Algorithmization-and-Programming-Part1/LabWork8/Task2/db/header-files/: Applicant.h  ConnectionParams.h  Street.h  conn.h  db.h
Fundamentals-of-Algorithmization-and-Programming-Part1/LabWork8/Task2/elastic-search/: elastic.cpp  index.json
Fundamentals-of-Algorithmization-and-Programming-Part1/LabWork8/Task2/elastic-search/header-files/: elastic.h
Fundamentals-of-Algorithmization-and-Programming-Part1/LabWork8/Task2/menu/: menu.cpp
Fundamentals-of-Algorithmization-and-Programming-Part1/LabWork8/Task2/menu/header-files/: menu.h
Fundamentals-of-Algorithmization-and-Programming-Part1/LabWork8/Task2/scripts/: random.cpp
Fundamentals-of-Algorithmization-and-Programming-Part1/LabWork8/Task2/scripts/header-files/: random.h
Fundamentals-of-Algorithmization-and-Programming-Part1/LabWork8/Task2/scripts/sql-scripts/: db.sql
Fundamentals-of-Algorithmization-and-Programming-Part1/LabWork8/Task2/utils/header-files/: utils.h
Fundamentals-of-Algorithmization-and-Programming-Part2/LabWork1/Task1/: CMakeLists.txt
Fundamentals-of-Algorithmization-and-Programming-Part2/LabWork5/: CMakeLists.txt
Fundamentals-of-Algorithmization-and-Programming-Part2/LabWork6/: CMakeLists.txt
(+32 files in other folders)
